--- a/GestorTeocratico/Components/App.razor
+++ b/GestorTeocratico/Components/App.razor
@@ -8,6 +8,7 @@
     <title>Gestor Teocrático</title>
     <base href="@NavigationManager.BaseUri" />
     <RadzenTheme @rendermode="@PageRenderMode" Theme="material" />
+    <link rel="stylesheet" href="css/account-pages.css" />
     <link rel="stylesheet" href="css/site.css" />
     <link rel="stylesheet" href="@Assets["GestorTeocratico.styles.css"]"/>
     <ImportMap/>
