Add authorization attributes and fallback policy for improved security

--- a/GestorTeocratico/Components/Account/Pages/_Imports.razor
+++ b/GestorTeocratico/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,3 @@
 ﻿@using GestorTeocratico.Components.Account.Shared
 @attribute [ExcludeFromInteractiveRouting]
+@attribute [Microsoft.AspNetCore.Authorization.AllowAnonymous]
