--- a/GestorTeocratico/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -9,10 +9,10 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Two-factor authentication (2FA)</PageTitle>
+<PageTitle>Autenticación en dos pasos (2FA)</PageTitle>
 
 <StatusMessage/>
-<h3>Two-factor authentication (2FA)</h3>
+<h3>Autenticación en dos pasos (2FA)</h3>
 @if (canTrack)
 {
     if (is2faEnabled)
@@ -20,22 +20,22 @@
         if (recoveryCodesLeft == 0)
         {
             <div class="alert alert-danger">
-                <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+                <strong>No te quedan códigos de recuperación.</strong>
+                <p>Debes <a href="Account/Manage/GenerateRecoveryCodes">generar un nuevo conjunto de códigos de recuperación</a> antes de poder iniciar sesión con un código de recuperación.</p>
             </div>
         }
         else if (recoveryCodesLeft == 1)
         {
             <div class="alert alert-danger">
-                <strong>You have 1 recovery code left.</strong>
-                <p>You can <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <strong>Te queda 1 código de recuperación.</strong>
+                <p>Puedes <a href="Account/Manage/GenerateRecoveryCodes">generar un nuevo conjunto de códigos de recuperación</a>.</p>
             </div>
         }
         else if (recoveryCodesLeft <= 3)
         {
             <div class="alert alert-warning">
-                <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+                <strong>Te quedan @recoveryCodesLeft códigos de recuperación.</strong>
+                <p>Deberías <a href="Account/Manage/GenerateRecoveryCodes">generar un nuevo conjunto de códigos de recuperación</a>.</p>
             </div>
         }
 
@@ -43,30 +43,30 @@
         {
             <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
                 <AntiforgeryToken/>
-                <button type="submit" class="btn btn-primary">Forget this browser</button>
+                <button type="submit" class="btn btn-primary">Olvidar este navegador</button>
             </form>
         }
 
-        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Disable 2FA</a>
-        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
+        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Desactivar 2FA</a>
+        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Restablecer códigos de recuperación</a>
     }
 
-    <h4>Authenticator app</h4>
+    <h4>Aplicación de autenticación</h4>
     @if (!hasAuthenticator)
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Agregar aplicación de autenticación</a>
     }
     else
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Configurar aplicación de autenticación</a>
+        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Restablecer aplicación de autenticación</a>
     }
 }
 else
 {
     <div class="alert alert-danger">
-        <strong>Privacy and cookie policy have not been accepted.</strong>
-        <p>You must accept the policy before you can enable two factor authentication.</p>
+        <strong>La política de privacidad y cookies no ha sido aceptada.</strong>
+        <p>Debes aceptar la política antes de poder habilitar la autenticación en dos pasos.</p>
     </div>
 }
 
@@ -94,7 +94,7 @@ else
         await SignInManager.ForgetTwoFactorClientAsync();
 
         RedirectManager.RedirectToCurrentPageWithStatus(
-            "The current browser has been forgotten. When you login again from this browser you will be prompted for your 2fa code.",
+            "El navegador actual ha sido olvidado. Cuando inicies sesión nuevamente desde este navegador, se te pedirá el código 2fa.",
             HttpContext);
     }
 
