--- a/GestorTeocratico/Components/App.razor
+++ b/GestorTeocratico/Components/App.razor
@@ -10,6 +10,8 @@
     <RadzenTheme @rendermode="@PageRenderMode" Theme="material" />
     <link rel="stylesheet" href="css/account-pages.css" />
     <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
+    <link rel="stylesheet" href="@Assets["app.css"]"/>
     <link rel="stylesheet" href="@Assets["GestorTeocratico.styles.css"]"/>
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
