--- a/GestorTeocratico/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/ChangePassword.razor
@@ -10,9 +10,9 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>Cambiar contraseña</PageTitle>
 
-<h3>Change password</h3>
+<h3>Cambiar contraseña</h3>
 <StatusMessage Message="@message"/>
 <div class="row">
     <div class="col-xl-6">
@@ -20,21 +20,21 @@
             <DataAnnotationsValidator/>
             <ValidationSummary class="text-danger" role="alert"/>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Enter the old password"/>
-                <label for="Input.OldPassword" class="form-label">Old password</label>
+                <InputText type="password" @bind-Value="Input.OldPassword" id="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Ingresa la contraseña anterior"/>
+                <label for="Input.OldPassword" class="form-label">Contraseña anterior</label>
                 <ValidationMessage For="() => Input.OldPassword" class="text-danger"/>
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password"/>
-                <label for="Input.NewPassword" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Ingresa la nueva contraseña"/>
+                <label for="Input.NewPassword" class="form-label">Nueva contraseña</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger"/>
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Enter the new password"/>
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Confirma la nueva contraseña"/>
+                <label for="Input.ConfirmPassword" class="form-label">Confirmar contraseña</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger"/>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Actualizar contraseña</button>
         </EditForm>
     </div>
 </div>
