--- a/GestorTeocratico/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/Disable2fa.razor
@@ -8,25 +8,25 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<Disable2fa> Logger
 
-<PageTitle>Disable two-factor authentication (2FA)</PageTitle>
+<PageTitle>Desactivar la autenticación en dos pasos (2FA)</PageTitle>
 
 <StatusMessage/>
-<h3>Disable two-factor authentication (2FA)</h3>
+<h3>Desactivar la autenticación en dos pasos (2FA)</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>This action only disables 2FA.</strong>
+        <strong>Esta acción solo desactiva la 2FA.</strong>
     </p>
     <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+        Desactivar la 2FA no cambia las claves usadas en las aplicaciones de autenticación. Si deseas cambiar la clave
+        utilizada en una aplicación de autenticación, debes <a href="Account/Manage/ResetAuthenticator">restablecer tus claves de autenticador.</a>
     </p>
 </div>
 
 <div>
     <form @formname="disable-2fa" @onsubmit="OnSubmitAsync" method="post">
         <AntiforgeryToken/>
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">Desactivar 2FA</button>
     </form>
 </div>
 
