--- a/GestorTeocratico/Components/Account/Pages/Manage/Email.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/Email.razor
@@ -12,9 +12,9 @@
 @inject IdentityUserAccessor UserAccessor
 @inject NavigationManager NavigationManager
 
-<PageTitle>Manage email</PageTitle>
+<PageTitle>Administrar correo electrónico</PageTitle>
 
-<h3>Manage email</h3>
+<h3>Administrar correo electrónico</h3>
 
 <StatusMessage Message="@message"/>
 <div class="row">
@@ -28,27 +28,27 @@
             @if (isEmailConfirmed)
             {
                 <div class="form-floating mb-3 input-group">
-                    <input type="text" value="@email" id="email" class="form-control" placeholder="Enter your email" disabled/>
+                    <input type="text" value="@email" id="email" class="form-control" placeholder="Ingresa tu correo electrónico" disabled/>
                     <div class="input-group-append">
                         <span class="h-100 input-group-text text-success font-weight-bold">✓</span>
                     </div>
-                    <label for="email" class="form-label">Email</label>
+                    <label for="email" class="form-label">Correo electrónico</label>
                 </div>
             }
             else
             {
                 <div class="form-floating mb-3">
-                    <input type="text" value="@email" id="email" class="form-control" placeholder="Enter your email" disabled/>
-                    <label for="email" class="form-label">Email</label>
-                    <button type="submit" class="btn btn-link" form="send-verification-form">Send verification email</button>
+                    <input type="text" value="@email" id="email" class="form-control" placeholder="Ingresa tu correo electrónico" disabled/>
+                    <label for="email" class="form-label">Correo electrónico</label>
+                    <button type="submit" class="btn btn-link" form="send-verification-form">Enviar correo de verificación</button>
                 </div>
             }
             <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.NewEmail" id="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Enter a new email"/>
-                <label for="Input.NewEmail" class="form-label">New email</label>
+                <InputText @bind-Value="Input.NewEmail" id="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Ingresa un nuevo correo electrónico"/>
+                <label for="Input.NewEmail" class="form-label">Nuevo correo electrónico</label>
                 <ValidationMessage For="() => Input.NewEmail" class="text-danger"/>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Cambiar correo electrónico</button>
         </EditForm>
     </div>
 </div>
