--- a/GestorTeocratico/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -10,12 +10,12 @@
 @inject IUserStore<ApplicationUser> UserStore
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Manage your external logins</PageTitle>
+<PageTitle>Administra tus inicios de sesión externos</PageTitle>
 
 <StatusMessage/>
 @if (currentLogins?.Count > 0)
 {
-    <h3>Registered Logins</h3>
+    <h3>Inicios de sesión registrados</h3>
     <table class="table">
         <tbody>
         @foreach (var login in currentLogins)
@@ -30,7 +30,7 @@
                             <div>
                                 <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider"/>
                                 <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey"/>
-                                <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                <button type="submit" class="btn btn-primary" title="Eliminar este inicio de sesión de @login.ProviderDisplayName de tu cuenta">Eliminar</button>
                             </div>
                         </form>
                     }
@@ -46,7 +46,7 @@
 }
 @if (otherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>Agrega otro servicio para iniciar sesión.</h4>
     <hr/>
     <form class="form-horizontal" action="Account/Manage/LinkExternalLogin" method="post">
         <AntiforgeryToken/>
@@ -54,7 +54,7 @@
             <p>
                 @foreach (var provider in otherLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="Iniciar sesión usando tu cuenta de @provider.DisplayName">
                         @provider.DisplayName
                     </button>
                 }
