--- a/GestorTeocratico/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -8,7 +8,7 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<GenerateRecoveryCodes> Logger
 
-<PageTitle>Generate two-factor authentication (2FA) recovery codes</PageTitle>
+<PageTitle>Generar códigos de recuperación para la autenticación en dos pasos (2FA)</PageTitle>
 
 @if (recoveryCodes is not null)
 {
@@ -16,24 +16,24 @@
 }
 else
 {
-    <h3>Generate two-factor authentication (2FA) recovery codes</h3>
+    <h3>Generar códigos de recuperación para la autenticación en dos pasos (2FA)</h3>
     <div class="alert alert-warning" role="alert">
         <p>
             <span class="glyphicon glyphicon-warning-sign"></span>
-            <strong>Put these codes in a safe place.</strong>
+            <strong>Guarda estos códigos en un lugar seguro.</strong>
         </p>
         <p>
-            If you lose your device and don't have the recovery codes you will lose access to your account.
+            Si pierdes tu dispositivo y no tienes los códigos de recuperación, perderás el acceso a tu cuenta.
         </p>
         <p>
-            Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-            used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+            Generar nuevos códigos de recuperación no cambia las claves usadas en las aplicaciones de autenticación. Si deseas cambiar la clave
+            utilizada en una aplicación de autenticación, debes <a href="Account/Manage/ResetAuthenticator">restablecer tus claves de autenticador.</a>
         </p>
     </div>
     <div>
         <form @formname="generate-recovery-codes" @onsubmit="OnSubmitAsync" method="post">
             <AntiforgeryToken/>
-            <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
+            <button class="btn btn-danger" type="submit">Generar códigos de recuperación</button>
         </form>
     </div>
 }
