--- a/GestorTeocratico/Components/Account/Pages/Manage/SetPassword.razor
+++ b/GestorTeocratico/Components/Account/Pages/Manage/SetPassword.razor
@@ -9,13 +9,12 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Set password</PageTitle>
+<PageTitle>Establecer contraseña</PageTitle>
 
-<h3>Set your password</h3>
+<h3>Establece tu contraseña</h3>
 <StatusMessage Message="@message"/>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    No tienes un usuario/contraseña local para este sitio. Agrega una cuenta local para poder iniciar sesión sin un inicio de sesión externo.
 </p>
 <div class="row">
     <div class="col-xl-6">
@@ -23,16 +22,16 @@
             <DataAnnotationsValidator/>
             <ValidationSummary class="text-danger" role="alert"/>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password"/>
-                <label for="Input.NewPassword" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Ingresa la nueva contraseña"/>
+                <label for="Input.NewPassword" class="form-label">Nueva contraseña</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger"/>
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Enter the new password"/>
-                <label for="Input.ConfirmPassword" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Ingresa la nueva contraseña"/>
+                <label for="Input.ConfirmPassword" class="form-label">Confirmar contraseña</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger"/>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Establecer contraseña</button>
         </EditForm>
     </div>
 </div>
